Added Selection sort

--- a/css/style.css
+++ b/css/style.css
@@ -85,11 +85,11 @@ body .everything .visualizer {
   height: 100%;
   z-index: 2;
   display: flex;
+  padding: 1vh;
   flex-wrap: wrap;
   gap: 1vh;
   align-items: center;
   justify-content: center;
-  font-size: var(--header-size);
 }
 body .everything .visualizer .number {
   padding: 1vh;
