Added Insetion sort and Fixed GUI for pc and mobile

--- a/css/style.css
+++ b/css/style.css
@@ -2,16 +2,23 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  color: var(--p-color);
-  font-family: Arial, Helvetica, sans-serif;
+  color: var(--text-color);
+  font-family: var(--text);
+  font-size: var(--text-size);
+  font-weight: 300;
 }
 
 :root {
-  --p-color: #0d0d0d;
-  --s-color: #f2f2f2;
-  --n-color: red;
+  --p-color: #0D0D0D;
+  --s-color: #FFFAFA;
+  --n1-color:#FFD700;
+  --n2-color: #66CDAA;
+  --n3-color: #32CD32;
+  --text-color: black;
+  --shadow: black;
   --text-size: 1.7vh;
   --header-size: 2.5vh;
+  --text: "Roboto", sans-serif;
 }
 
 body {
@@ -32,7 +39,6 @@ body .everything .nav-bar {
   z-index: 0;
   padding: 2vh;
   flex-wrap: wrap;
-  border-bottom: 0.3vh solid var(--p-color);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -40,10 +46,11 @@ body .everything .nav-bar {
 body .everything .nav-bar .array-generator {
   padding: 1vh;
   cursor: pointer;
-  background: var(--p-color);
-  color: var(--s-color);
+  background: var(--n1-color);
   text-transform: uppercase;
+  font-weight: 900;
   font-size: var(--text-size);
+  box-shadow: 0.5vh 0.5vh var(--shadow);
 }
 body .everything .nav-bar .array-sorting-controller {
   display: flex;
@@ -54,9 +61,11 @@ body .everything .nav-bar .array-sorting-controller {
 body .everything .nav-bar .array-sorting-controller .array-size-controller, body .everything .nav-bar .array-sorting-controller .array-speed-controller {
   padding: 1vh;
   font-size: var(--text-size);
-  background: var(--s-color);
-  border: 0.3vh solid var(--p-color);
+  font-weight: 900;
+  background: var(--n1-color);
+  border: 0.3vh solid transparent;
   outline: none;
+  box-shadow: 0.5vh 0.5vh var(--shadow);
 }
 body .everything .nav-bar .sorting-algo-options {
   display: flex;
@@ -68,17 +77,22 @@ body .everything .nav-bar .sorting-algo-options .sorting-algo {
   cursor: pointer;
   padding: 1vh;
   font-size: var(--text-size);
-  background: var(--p-color);
-  color: var(--s-color);
+  background: var(--s-color);
+  font-weight: 300;
+}
+body .everything .nav-bar .sorting-algo-options .sorting-algo:first-child {
+  background: var(--n1-color);
+  box-shadow: 0.5vh 0.5vh var(--shadow);
+  font-weight: 900;
 }
 body .everything .nav-bar .sorter {
   cursor: pointer;
   font-size: var(--text-size);
   padding: 1vh;
-  font-weight: 900;
-  color: var(--s-color);
+  font-weight: 900 !important;
   text-transform: uppercase;
-  background: var(--n-color);
+  background: var(--n1-color);
+  box-shadow: 0.5vh 0.5vh var(--shadow);
 }
 body .everything .visualizer {
   width: 100%;
@@ -102,15 +116,15 @@ body .everything .visualizer .unsorted {
   color: var(--p-color);
 }
 body .everything .visualizer .sorting-1 {
-  background: yellow;
+  background: var(--n1-color);
   color: var(--p-color);
 }
 body .everything .visualizer .sorting-2 {
-  background: cyan;
+  background: var(--n2-color);
   color: var(--p-color);
 }
 body .everything .visualizer .sorted {
-  background: green;
+  background: var(--n3-color);
   color: var(--s-color);
 }
 body .everything .blocker {
@@ -124,14 +138,46 @@ body .everything .blocker {
 }
 
 @media (max-width: 980px) {
+  .everything {
+    align-items: center !important;
+    justify-content: center !important;
+  }
   .nav-bar {
+    z-index: 0 !important;
+    position: fixed;
+    width: 100% !important;
+    height: 100% !important;
     flex-direction: column !important;
     gap: 2vh !important;
   }
-  .nav-bar div {
-    width: 100% !important;
+  .nav-bar .array-generator {
+    position: absolute;
+    top: 2vh;
+    left: 1vh;
+  }
+  .nav-bar .array-sorting-controller {
+    position: absolute;
+    top: 2vh;
+    right: 1vh;
   }
   .nav-bar .sorting-algo-options {
-    flex-direction: column !important;
+    position: absolute;
+    top: 10vh;
+    left: 1vh;
+  }
+  .nav-bar .sorter {
+    position: absolute;
+    width: 90% !important;
+    text-align: center !important;
+    bottom: 2vh;
+  }
+  .visualizer {
+    z-index: 2 !important;
+    height: -moz-max-content !important;
+    height: max-content !important;
+    pointer-events: none !important;
+  }
+  .blocker {
+    z-index: 1 !important;
   }
 }/*# sourceMappingURL=style.css.map */
